Added a few details about myself to the main page.
Added personal information, Student Information and contact information. Also added an image of myself.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,68 @@
+<!DOCTYPE HTML>
 <HTML>
-    <title>
-        "Jadnell's Site"
-    </title>
 
-    <body>
-        <h1> TEST </h1>
-    </body>
+<head>
+    <title> Jadnell Reyes' Website </title>
+</head>
+<meta name="description" content="This webpage contains information about Jadnell Reyes, 
+            a Puerto Rican Computer Engineering Student">
+
+<body>
+    <h2>
+        <center> Hello, </center>
+    </h2>
+    <h1>
+        <center> my name is Jadnell H. Reyes Pérez </center>
+    </h1>
+        <center> <b>↓ This is me ↓ </b> </center>
+        <br>
+        
+    <center>
+        <a href="https://www.instagram.com/j_dnell/"><img src="Images/ME.jpg" title="My Instagram" width="200px"
+                height="200px" alt="I was supposed to appear here..."></a>
+    </center>
+    <hr width="90%">
+
+    <h3>
+        <center> Personal information: </center>
+    </h3>
+    </center>
+    <ul>
+        <li> <b><i>Birth Place:</i></b> Puerto Rico </li>
+        <li> <b><i>Birth Date:</i></b> January 25, 2001 </li>
+        <li> <b><i>Age:</i></b> 21 </li>
+        <li> <b><i>Sex:</i></b> Male </li>
+        <li> <b><i>Zodiac Sign:</i></b> Aquarius </li>
+    </ul>
+    <hr width="90%">
+
+    <h3>
+        <center> Student information: </center>
+    </h3>
+    <ul>
+        <li> <b><i>University:</i></b> Polytechnic University of Puerto Rico </li>
+        <li> <b><i>Student ID:</i></b> #109739</li>
+        <li> <b><i>Degree:</i></b> Bachelor's </li>
+        <li> <b><i>Concentration:</i></b> Computer Engineering</li>
+        <li> <b><i>Graduation Date:</i></b> May, 2023 </li>
+        <li> <b><i>Years in College:</i></b> 5 </li>
+        <li> <b><i>GPA:</i></b> 3.29 </li>
+    </ul>
+    <hr width="90%">
+
+    <h3>
+        <center> Contact information: </center>
+    </h3>
+    <ul>
+        <li> <b><i>Phone Number:</i></b> <a href="tel:787-605-5895"> (787) 605-5895 </a> </li>
+        <li> <b><i>Personal Email:</i></b> <a href="mailto: jadnell.555@gmail.com"> jadnell.555@gmail.com </a> </li>
+        <li> <b><i>Professional Email:</i></b> <a href="mailto: jadnellReyes@gmail.com"> jadnellReyes@gmail.com </a>
+        </li>
+        <li> <b><i>Institutional Email:</i></b> <a href="mailto: reyes_109739@students.pupr.edu">
+                reyes_109739@students.pupr.edu </a> </li>
+    </ul>
+
+
+</body>
+
 </HTML>
