Added second and third page with working buttons

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-<!DOCTYPE HTML>
-<HTML>
+<?xml version = "1.0"?>
+<!DOCTYPE HTML PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
+
+<HTML xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <title> Jadnell Reyes' Website </title>
@@ -8,14 +10,20 @@
             a Puerto Rican Computer Engineering Student">
 
 <body>
+    <a href="secondPage.html"><img src="Images/next.png" align="right" title="Next Page" width="50px" height="50px"
+            alt="Where is my button?">
+    </a>
+    <br>
+    <br>
+    
     <h2>
         <center> Hello, </center>
     </h2>
     <h1>
         <center> my name is Jadnell H. Reyes Pérez </center>
     </h1>
-        <center> <b>↓ This is me ↓ </b> </center>
-        <br>
+    <center> <b>↓ This is me ↓ </b> </center>
+    <br>
 
     <center>
         <a href="https://www.instagram.com/j_dnell/"><img src="Images/ME.jpg" title="My Instagram" width="500px"
@@ -61,6 +69,16 @@
         <li> <b><i>Institutional Email:</i></b> <a href="mailto: reyes_109739@students.pupr.edu">
                 reyes_109739@students.pupr.edu </a> </li>
     </ul>
+    <br>
+
+
+
+
+    <div>
+        <footer>
+            <p align="right"> Page 1/3</p>
+        </footer>
+    </div>
 
 
 </body>
