Added content to pages 2 and 3.

--- a/secondPage.html
+++ b/secondPage.html
@@ -8,14 +8,12 @@
 </head>
 
 <body>
-
     <div>
-
         <header>
-            <a href="index.html"><img src="Images/back.png" align="left" title="Previous Page" width="50px"
-                    height="50px" alt="Where is my button?"></a>
-
             <center>
+                <a href="index.html"><img src="Images/back.png" align="left" title="Previous Page" width="50px"
+                        height="50px" alt="Where is my button?"></a>
+
                 <a href="index.html"><img src="Images/home.png" title="Main Page" width="50px" height="50px"
                         alt="Where is my button?"></a>
 
@@ -23,27 +21,105 @@
                         height="50px" alt="Where is my button?"></a>
             </center>
         </header>
-
     </div>
 
     <br>
     <br>
 
+    <h2> <center>Programming Languages Learned: </center> </h2>
+
     <center>
-        <h3> Heading 1 </h3>
-        <h3> Heading 2 </h3>
-        <h3> Heading 3 </h3>
-        <h3> Heading 4 </h3>
-        <h3> Heading 5 </h3>
-        <h3> Heading 6 </h3>
+        <table>
+            <thead>
+                <th><i> Language Logo: </i></th>
+                <th><i> Language Name: </i></th>
+                <th><i> Proficiency: </i></th>
+            </thead>
+
+            <tr>
+                <td>
+                    <center> <img src="Images/c++.png" title="C++" width="100px" height="100px" alt="C++ Logo"></a>
+                    </center>
+                </td>
+                <td>
+                    <center> C++ </center>
+                </td>
+                <td>☻☻☻☻☺</td>
+            </tr>
+
+            <tr>
+                <td>
+                    <center> <img src="Images/python.png" title="Python" width="100px" height="100px"
+                            alt="Python Logo"></a>
+                    </center>
+                </td>
+                <td>
+                    <center>Python</center>
+                </td>
+                <td>☻☻☻☺☺</td>
+            </tr>
+
+            <tr>
+                <td>
+                    <center> <img src="Images/matlab.png" title="MATLAB" width="150px" height=125px"
+                            alt="MATLAB Logo"></a>
+                    </center>
+                </td>
+                <td>
+                    <center>MATLAB</center>
+                </td>
+                <td>☻☻☺☺☺</td>
+            </tr>
+
+            <tr>
+                <td>
+                    <center> <img src="Images/html.png" title="HTML5" width="100px" height="100px" alt="HTML5 Logo"></a>
+                    </center>
+                </td>
+                <td>
+                    <center>HTML</center>
+                </td>
+                <td>☻☻☻☺☺</td>
+            </tr>
+
+            <tr>
+                <td>
+                    <center> <img src="Images/css.png" title="CSS3" width="100px" height="100px" alt="CSS3 Logo"></a>
+                    </center>
+                </td>
+                <td>
+                    <center>CSS</center>
+                </td>
+                <td>☻☻☺☺☺</td>
+            </tr>
+
+            <tr>
+                <td>
+                    <center> <img src="Images/dart.png" title="Dart" width="100px" height="100px" alt="Dart Logo"></a>
+                    </center>
+                </td>
+                <td>
+                    <center>Dart</center>
+                </td>
+                <td>☻☻☺☺☺</td>
+            </tr>
+
+            <tr>
+                <td>
+                    <center> <img src="Images/vhdl.png" title="VHDL" width="100px" height="100px" alt="VHDL Logo"></a>
+                    </center>
+                </td>
+                <td>
+                    <center>VHDL</center>
+                </td>
+                <td>☻☺☺☺☺</td>
+            </tr>
+        </table>
     </center>
-
-
-
 
     <div>
         <footer>
-            <p align="right"> Page 2/3</p>
+            <p align="right"><sub> Page 2/3 </sub></p>
         </footer>
     </div>
 
