--- a/thirdPage.html
+++ b/thirdPage.html
@@ -15,7 +15,7 @@
                     height="50px" alt="Where is my button?"></a>
 
             <a href="index.html"><img src="Images/home.png" align="right" title="Main Page" width="50px" height="50px"
-                        alt="Where is my button?"></a>
+                    alt="Where is my button?"></a>
 
         </header>
 
@@ -25,17 +25,88 @@
     <br>
 
     <center>
-        <h3> Heading 1 </h3>
-        <h3> Heading 2 </h3>
-        <h3> Heading 3 </h3>
-        <h3> Heading 4 </h3>
-        <h3> Heading 5 </h3>
-        <h3> Heading 6 </h3>
+        <h2> Projects for University Classes: </h2>
     </center>
+
+    <ol>
+        <b>
+            <li>
+                <h3> Haresh's Eating Truck:
+            </li>
+        </b>
+
+        <center>
+
+        </center>
+
+        <p><b><i> Description: </i></b> Haresh's Eating Truck was my final project of the CECS 2223 
+                                        (Computer Programming Lab II) course. The purpose of this 
+                                        project was to test our knowledge on C++ classes and objects. 
+                                        The program runs inside the terminal and it is composed 
+                                        of a menu that holds 6 different options. These options are 
+                                        entering a new item, entering a customer order, export all inventory 
+                                        items (to a .csv file), create combos, about me and exit. The program
+                                        also printed the receipts for each order in a .txt file.</p>
+        <p><b><i> Language: </i></b></p>
+        <img src="Images/c++.png" title="C++" width="50px" height="50px" alt="C++ Logo"></a>
+        <br>
+        <p><b><i> Status: </i></b> Finished. </p>
+        <p><b><i> Future Work: </i></b> Create a GUI (Graphical User Interface) for easier accessibility. </p>
+        <p><b><i> Program: </i></b></p>
+        <img src="Images/hareshEatingTruck.png" title="Haresh's Eating Truck" width="600px" height="160px" alt="The project didn't load."></a>
+        <b>
+            <li>
+                <h3> Haresh Quiz Game:
+            </li>
+        </b>
+
+        <p><b><i> Description: </i></b> </p>
+        <p><b><i> Language: </i></b> </p>
+        <img src="Images/python.png" title="Python" width="50px" height="50px"
+        alt="Python Logo"></a>
+        <p><b><i> Status: </i></b> Finished. </p>
+        <b>
+            <li>
+                <h3> Frogger Remake:
+            </li>
+        </b>
+
+        <p><b><i> Description: </i></b> </p>
+        <p><b><i> Language: </i></b> </p>
+        <img src="Images/python.png" title="Python" width="50px" height="50px">
+        <p><b><i> Status: </i></b> Incomplete. </p>
+        <b>
+            <li>
+                <h3> Webpage About Me:
+            </li>
+        </b>
+
+        <p><b><i> Description: </i></b> </p>
+        <p><b><i> Languages: </i></b> </p>
+        <img src="Images/html.png" title="HTML5" width="50px" height="50px" alt="HTML5 Logo"></a>
+        <img src="Images/css.png" title="CSS3" width="50px" height="50px" alt="CSS3 Logo"></a>
+        <p><b><i> Status: </i></b> Work in progress...</p>
+    </ol>
+
+    <center>
+        <h2> Personal Projects: </h2>
+    </center>
+
+    <ol>
+        <b>
+            <li>
+                <h3>PlantApp: </h3>
+            </li>
+        </b>
+        <p><b><i> Description: </i></b> </p>
+        <p><b><i> Language: </i></b></p>
+        <img src="Images/dart.png" title="Dart" width="75px" height="75px" alt="Dart Logo"></a>
+        <p><b><i> Status: </i></b> Work in progress... </p>
+    </ol>
 
     <div>
         <footer>
-            <p align="right"> Page 3/3</p>
+            <p align="right"><sub> Page 3/3 </sub></p>
         </footer>
     </div>
 
