--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
             a Puerto Rican Computer Engineering Student">
 
 <body>
-    <a href="secondPage.html"><img src="Images/next.png" align="right" title="Next Page" width="50px" height="50px"
-            alt="Where is my button?">
-    </a>
+    <div>
+        <header>
+            <a href="secondPage.html"><img src="Images/next.png" align="right" title="Next Page" width="50px"
+                    height="50px" alt="Where is my button?">
+            </a>
+        </header>
+    </div>
     <br>
     <br>
-    
+
     <h2>
         <center> Hello, </center>
     </h2>
@@ -76,7 +80,7 @@
 
     <div>
         <footer>
-            <p align="right"> Page 1/3</p>
+            <p align="right"><sub> Page 1/3 </sub> </p>
         </footer>
     </div>
 
