--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
     <h1>
         <center> my name is Jadnell H. Reyes Pérez </center>
     </h1>
+    <hr width="90%">
     <center> <b>↓ This is me ↓ </b> </center>
     <br>
 
     <center>
-        <a href="https://www.instagram.com/j_dnell/"><img src="Images/ME.jpg" title="My Instagram" width="500px"
-                height="500px" alt="I was supposed to appear here..."></a>
+        <a><img src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
+                alt="I was supposed to appear here..."></a>
     </center>
     <hr width="90%">
 
@@ -73,13 +74,37 @@
         <li> <b><i>Institutional Email:</i></b> <a href="mailto: reyes_109739@students.pupr.edu">
                 reyes_109739@students.pupr.edu </a> </li>
     </ul>
-    <br>
-
-
-
+    <hr width="90%">
 
     <div>
         <footer>
+            <h4>
+                <center> Social Media: </center>
+            </h4>
+
+            <center>
+                <table>
+                    <thead>
+                        <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
+                                    title="Instagram" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                        <th> <a href="https://www.facebook.com/jadnell"><img src="Images/facebook.png" align="left"
+                                    title="Facebook" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                        <th><a href="https://github.com/jadnell555"><img src="Images/github.png" align="center"
+                                    title="GitHub" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+
+                        <th><a href="https://paypal.me/jadnell"><img src="Images/paypal.png" align="right"
+                                    title="PayPal" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+
+                        <th><a href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
+                                    align="right" title="Discord" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                    </thead>
+                </table>
+            </center>
             <p align="right"><sub> Page 1/3 </sub> </p>
         </footer>
     </div>
