--- a/secondPage.html
+++ b/secondPage.html
@@ -27,7 +27,8 @@
     <br>
 
     <h2> <center>Programming Languages Learned: </center> </h2>
-
+    <h5> <center>(Up to August, 2022)</center></h5>
+    <hr width="90%">
     <center>
         <table>
             <thead>
@@ -44,7 +45,7 @@
                 <td>
                     <center> C++ </center>
                 </td>
-                <td>☻☻☻☻☺</td>
+                <td><center> ●●●●○ </center></td>
             </tr>
 
             <tr>
@@ -56,7 +57,7 @@
                 <td>
                     <center>Python</center>
                 </td>
-                <td>☻☻☻☺☺</td>
+                <td><center> ●●●○○ </center></td>
             </tr>
 
             <tr>
@@ -68,7 +69,7 @@
                 <td>
                     <center>MATLAB</center>
                 </td>
-                <td>☻☻☺☺☺</td>
+                <td><center> ●●○○○ </center></td>
             </tr>
 
             <tr>
@@ -79,7 +80,7 @@
                 <td>
                     <center>HTML</center>
                 </td>
-                <td>☻☻☻☺☺</td>
+                <td><center> ●●●○○ </center></td>
             </tr>
 
             <tr>
@@ -90,7 +91,7 @@
                 <td>
                     <center>CSS</center>
                 </td>
-                <td>☻☻☺☺☺</td>
+                <td><center> ●●○○○ </center></td>
             </tr>
 
             <tr>
@@ -101,7 +102,7 @@
                 <td>
                     <center>Dart</center>
                 </td>
-                <td>☻☻☺☺☺</td>
+                <td><center> ●●○○○ </center></td>
             </tr>
 
             <tr>
@@ -112,13 +113,41 @@
                 <td>
                     <center>VHDL</center>
                 </td>
-                <td>☻☺☺☺☺</td>
+                <td><center> ●○○○○ </center></td>
             </tr>
         </table>
     </center>
+    <hr width="90%">
 
     <div>
         <footer>
+            <h4>
+                <center> Social Media: </center>
+            </h4>
+
+            <center>
+                <table>
+                    <thead>
+                        <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
+                                    title="Instagram" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                        <th> <a href="https://www.facebook.com/jadnell"><img src="Images/facebook.png" align="left"
+                                    title="Facebook" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                        <th><a href="https://github.com/jadnell555"><img src="Images/github.png" align="center"
+                                    title="GitHub" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+
+                        <th><a href="https://paypal.me/jadnell"><img src="Images/paypal.png" align="right"
+                                    title="PayPal" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+
+                        <th><a href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
+                                    align="right" title="Discord" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                    </thead>
+                </table>
+            </center>
             <p align="right"><sub> Page 2/3 </sub></p>
         </footer>
     </div>
