--- a/thirdPage.html
+++ b/thirdPage.html
@@ -27,6 +27,7 @@
     <center>
         <h2> Projects for University Classes: </h2>
     </center>
+    <hr width="90%">
 
     <ol>
         <b>
@@ -35,57 +36,66 @@
             </li>
         </b>
 
+        <p><b><i> Description: </i></b> Haresh's Eating Truck was my final project of the CECS 2223
+            (Computer Programming Lab II) course. The purpose of this
+            project was to test our knowledge on C++ classes and objects.
+            The program runs inside the terminal and it is composed
+            of a menu that holds 6 different options. These options are
+            entering a new item, entering a customer order, export all inventory
+            items (to a .csv file), create combos, about me and exit. The program
+            also printed the receipts for each order in a .txt file.</p>
         <center>
+            <p><b><i> Language: </i></b></p>
+            <a><img src="Images/c++.png" title="C++" width="150px" height="150px" alt="C++ Logo"></a>
+            <br>
+            <p><b><i> Status: </i></b> Finished. </p>
+            <p><b><i> Future Work: </i></b> Create a GUI (Graphical User Interface) for easier accessibility. </p>
+            <p><b><i> Program: </i></b></p>
 
+            <img src="Images/hareshEatingTruck.png" title="Haresh's Eating Truck" width="1578px" height="435px"
+                alt="The project didn't load."></a>
         </center>
-
-        <p><b><i> Description: </i></b> Haresh's Eating Truck was my final project of the CECS 2223 
-                                        (Computer Programming Lab II) course. The purpose of this 
-                                        project was to test our knowledge on C++ classes and objects. 
-                                        The program runs inside the terminal and it is composed 
-                                        of a menu that holds 6 different options. These options are 
-                                        entering a new item, entering a customer order, export all inventory 
-                                        items (to a .csv file), create combos, about me and exit. The program
-                                        also printed the receipts for each order in a .txt file.</p>
-        <p><b><i> Language: </i></b></p>
-        <img src="Images/c++.png" title="C++" width="50px" height="50px" alt="C++ Logo"></a>
-        <br>
-        <p><b><i> Status: </i></b> Finished. </p>
-        <p><b><i> Future Work: </i></b> Create a GUI (Graphical User Interface) for easier accessibility. </p>
-        <p><b><i> Program: </i></b></p>
-        <img src="Images/hareshEatingTruck.png" title="Haresh's Eating Truck" width="600px" height="160px" alt="The project didn't load."></a>
+        <hr width="90%">
         <b>
             <li>
                 <h3> Haresh Quiz Game:
             </li>
         </b>
 
-        <p><b><i> Description: </i></b> </p>
-        <p><b><i> Language: </i></b> </p>
-        <img src="Images/python.png" title="Python" width="50px" height="50px"
-        alt="Python Logo"></a>
-        <p><b><i> Status: </i></b> Finished. </p>
-        <b>
-            <li>
-                <h3> Frogger Remake:
-            </li>
-        </b>
-
-        <p><b><i> Description: </i></b> </p>
-        <p><b><i> Language: </i></b> </p>
-        <img src="Images/python.png" title="Python" width="50px" height="50px">
-        <p><b><i> Status: </i></b> Incomplete. </p>
+        <p><b><i> Description: </i></b> The project consists of creating a simple game using the graphics.py
+            module. Haresh Quiz Game is a quiz game that consists of 20 questions.
+            You start with three lives, every time you answer a question incorrectly
+            you lose one. If you lose all of your lives it's game over. This project
+            was handed in as a midterm project for the CECS 3210 (Advanced Programming)
+            course.</p>
+        <center>
+            <p><b><i> Language: </i></b> </p>
+            <img src="Images/python.png" title="Python" width="150px" height="150px" alt="Python Logo"></a>
+            <p><b><i> Status: </i></b> Finished. </p>
+            <p><b><i> Program: </i></b></p>
+        </center>
+        <center>
+            <img src="Images/hareshQuizGame.png" title="Haresh Quiz Game" width="500px" height="500px"
+                alt="The project didn't load."></a>
+        </center>
+        <hr width="90%">
         <b>
             <li>
                 <h3> Webpage About Me:
             </li>
         </b>
 
-        <p><b><i> Description: </i></b> </p>
-        <p><b><i> Languages: </i></b> </p>
-        <img src="Images/html.png" title="HTML5" width="50px" height="50px" alt="HTML5 Logo"></a>
-        <img src="Images/css.png" title="CSS3" width="50px" height="50px" alt="CSS3 Logo"></a>
-        <p><b><i> Status: </i></b> Work in progress...</p>
+        <p><b><i> Description: </i></b> This is my current project, the webpage you are interacting with. The purpose
+            of this assignment is to demonstrate how much knowledge we obtained from the first
+            lectures in HTML, XHTML and CSS. The code for this course is CECS 3214-80
+            (Internet Programming I).
+            <center>
+                <p><b><i> Languages: </i></b> </p>
+                <img src="Images/html.png" title="HTML5" width="150px" height="150px" alt="HTML5 Logo"></a>
+                <img src="Images/css.png" title="CSS3" width="150px" height="150px" alt="CSS3 Logo"></a>
+                <p><b><i> Status: </i></b> Finished.</p>
+            </center>
+            <hr width="90%">
     </ol>
 
     <center>
@@ -98,14 +108,55 @@
                 <h3>PlantApp: </h3>
             </li>
         </b>
-        <p><b><i> Description: </i></b> </p>
-        <p><b><i> Language: </i></b></p>
-        <img src="Images/dart.png" title="Dart" width="75px" height="75px" alt="Dart Logo"></a>
-        <p><b><i> Status: </i></b> Work in progress... </p>
-    </ol>
+        <p><b><i> Description: </i></b> I started working on this personal project to learn more about mobile
+            application
+            development. More specifically, to learn the Flutter framework, which uses
+            Google-developed Dart programming language. It is a mobile app that works both on
+            android and iPhone. At the moment, the main idea for this app is to work as a list
+            or database of your plants. You would have the ability to create new plant objects
+            with relevant information about your plant such as light type, watering, growing
+            tips, pictures, etc. Each object would look like a stack of cards that the user
+            can swipe to keep reading more details about the plant. </p>
+        <center>
+            <p><b><i> Language: </i></b></p>
+            <img src="Images/dart.png" title="Dart" width="150px" height="150px" alt="Dart Logo"></a>
+            <p><b><i> Status: </i></b> Work in progress... </p>
+            <p><b><i> Program: </i></b></p>
 
+            <img src="Images/plantApp.jpg" title="plantApp" width="400px" height="900px"
+                alt="The project didn't load."></a>
+        </center>
+    </ol>
+    <hr width="90%">
     <div>
         <footer>
+            <h4>
+                <center> Social Media: </center>
+            </h4>
+
+            <center>
+                <table>
+                    <thead>
+                        <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
+                                    title="Instagram" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                        <th> <a href="https://www.facebook.com/jadnell"><img src="Images/facebook.png" align="left"
+                                    title="Facebook" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                        <th><a href="https://github.com/jadnell555"><img src="Images/github.png" align="center"
+                                    title="GitHub" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+
+                        <th><a href="https://paypal.me/jadnell"><img src="Images/paypal.png" align="right"
+                                    title="PayPal" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+
+                        <th><a href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
+                                    align="right" title="Discord" width="50px" height="50px" alt="Where is my button?">
+                            </a> </th>
+                    </thead>
+                </table>
+            </center>
             <p align="right"><sub> Page 3/3 </sub></p>
         </footer>
     </div>
