Added CSS Style Sheet 1

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
 <head>
     <title> Jadnell Reyes' Website </title>
+    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
 </head>
+
 <meta name="description" content="This webpage contains information about Jadnell Reyes, 
             a Puerto Rican Computer Engineering Student">
 
@@ -27,15 +29,14 @@
         <center> my name is Jadnell H. Reyes Pérez </center>
     </h1>
     <hr width="90%">
-    <center> <b>↓ This is me ↓ </b> </center>
-    <br>
-
+    <h5>
+        <center> <b>↓ This is me ↓ </b> </center>
+    </h5>
     <center>
-        <a><img src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
+        <a><img class="myPic" src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
                 alt="I was supposed to appear here..."></a>
     </center>
     <hr width="90%">
-
     <h3>
         <center> Personal information: </center>
     </h3>
@@ -47,6 +48,7 @@
         <li> <b><i>Sex:</i></b> Male </li>
         <li> <b><i>Zodiac Sign:</i></b> Aquarius </li>
     </ul>
+
     <hr width="90%">
 
     <h3>
@@ -83,7 +85,7 @@
             </h4>
 
             <center>
-                <table>
+                <table class="one">
                     <thead>
                         <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
                                     title="Instagram" width="50px" height="50px" alt="Where is my button?">
@@ -105,7 +107,7 @@
                     </thead>
                 </table>
             </center>
-            <p align="right"><sub> Page 1/3 </sub> </p>
+            <sub> Page 1/3 </sub>
         </footer>
     </div>
 
