--- a/secondPage.html
+++ b/secondPage.html
@@ -5,6 +5,7 @@
 
 <head>
     <title> Jadnell Reyes' Website </title>
+    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -126,7 +127,7 @@
             </h4>
 
             <center>
-                <table>
+                <table class="one">
                     <thead>
                         <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
                                     title="Instagram" width="50px" height="50px" alt="Where is my button?">
@@ -148,7 +149,7 @@
                     </thead>
                 </table>
             </center>
-            <p align="right"><sub> Page 2/3 </sub></p>
+            <sub> Page 2/3 </sub>
         </footer>
     </div>
 
