--- a/thirdPage.html
+++ b/thirdPage.html
@@ -5,6 +5,7 @@
 
 <head>
     <title> Jadnell Reyes' Website </title>
+    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
@@ -16,7 +17,6 @@
 
             <a href="index.html"><img src="Images/home.png" align="right" title="Main Page" width="50px" height="50px"
                     alt="Where is my button?"></a>
-
         </header>
 
     </div>
@@ -27,16 +27,17 @@
     <center>
         <h2> Projects for University Classes: </h2>
     </center>
+    
     <hr width="90%">
 
     <ol>
         <b>
             <li>
-                <h3> Haresh's Eating Truck:
+                <h3> Haresh's Eating Truck: </h3>
             </li>
         </b>
 
-        <p><b><i> Description: </i></b> Haresh's Eating Truck was my final project of the CECS 2223
+        <p class="desc"><b><i> Description: </i></b> Haresh's Eating Truck was my final project of the CECS 2223
             (Computer Programming Lab II) course. The purpose of this
             project was to test our knowledge on C++ classes and objects.
             The program runs inside the terminal and it is composed
@@ -49,20 +50,22 @@
             <a><img src="Images/c++.png" title="C++" width="150px" height="150px" alt="C++ Logo"></a>
             <br>
             <p><b><i> Status: </i></b> Finished. </p>
-            <p><b><i> Future Work: </i></b> Create a GUI (Graphical User Interface) for easier accessibility. </p>
+            <p><b><i> Future Work: </i></b> Create a GUI (Graphical User Interface) for easier accessibility.</p>
             <p><b><i> Program: </i></b></p>
 
             <img src="Images/hareshEatingTruck.png" title="Haresh's Eating Truck" width="435px" height="435px"
                 alt="The project didn't load."></a>
         </center>
-        <hr width="90%">
+
+        <hr width="100%">
+
         <b>
             <li>
-                <h3> Haresh Quiz Game:
+                <h3> Haresh Quiz Game: </h3>
             </li>
         </b>
 
-        <p><b><i> Description: </i></b> The project consists of creating a simple game using the graphics.py
+        <p class="desc"><b><i> Description: </i></b> The project consists of creating a simple game using the graphics.py
             module. Haresh Quiz Game is a quiz game that consists of 20 questions.
             You start with three lives, every time you answer a question incorrectly
             you lose one. If you lose all of your lives it's game over. This project
@@ -81,11 +84,11 @@
         <hr width="90%">
         <b>
             <li>
-                <h3> Webpage About Me:
+                <h3> Webpage About Me: </h3>
             </li>
         </b>
 
-        <p><b><i> Description: </i></b> This is my current project, the webpage you are interacting with. The purpose
+        <p class="desc"><b><i> Description: </i></b> This is my current project, the webpage you are interacting with. The purpose
             of this assignment is to demonstrate how much knowledge we obtained from the first
             lectures in HTML, XHTML and CSS. The code for this course is CECS 3214-80
             (Internet Programming I).
@@ -108,7 +111,7 @@
                 <h3>PlantApp: </h3>
             </li>
         </b>
-        <p><b><i> Description: </i></b> I started working on this personal project to learn more about mobile
+        <p class="desc"><b><i> Description: </i></b> I started working on this personal project to learn more about mobile
             application
             development. More specifically, to learn the Flutter framework, which uses
             Google-developed Dart programming language. It is a mobile app that works both on
@@ -135,7 +138,7 @@
             </h4>
 
             <center>
-                <table>
+                <table class="one">
                     <thead>
                         <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
                                     title="Instagram" width="50px" height="50px" alt="Where is my button?">
@@ -157,7 +160,7 @@
                     </thead>
                 </table>
             </center>
-            <p align="right"><sub> Page 3/3 </sub></p>
+            <sub> Page 3/3 </sub>
         </footer>
     </div>
 
