Added button to change CSS Sheet Style
Added a few aesthetic details

--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 
 <head>
     <title> Jadnell Reyes' Website </title>
-    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
+    <link href="Styles/styleSheet2.css" type="text/css" rel="stylesheet" />
 </head>
 
 <meta name="description" content="This webpage contains information about Jadnell Reyes, 
@@ -14,11 +14,10 @@
 <body>
     <div>
         <header>
-            <a href="secondPage.html"><img src="Images/next.png" align="right" title="Next Page" width="50px"
+            <a href="secondPage2.html"><img src="Images/next.png" align="right" title="Next Page" width="50px"
                     height="50px" alt="Where is my button?">
             </a>
-
-            <a href="index2.html"><img src="Images/otherStyleSheet.png" align="left" title="Change Style Sheet"
+            <a href="index.html"><img src="Images/otherStyleSheet.png" align="left" title="Change Style Sheet"
                     width="50px" height="50px" alt="Where is my button?">
             </a>
         </header>
@@ -114,6 +113,8 @@
             <sub> Page 1/3 </sub>
         </footer>
     </div>
+
+
 </body>
 
 </HTML>
