--- a/secondPage2.html
+++ b/secondPage2.html
@@ -5,20 +5,20 @@
 
 <head>
     <title> Jadnell Reyes' Website </title>
-    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
+    <link href="Styles/styleSheet2.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
     <div>
         <header>
             <center>
-                <a href="index.html"><img src="Images/back.png" align="left" title="Previous Page" width="50px"
+                <a href="index2.html"><img src="Images/back.png" align="left" title="Previous Page" width="50px"
                         height="50px" alt="Where is my button?"></a>
 
-                <a href="index.html"><img src="Images/home.png" title="Main Page" width="50px" height="50px"
+                <a href="index2.html"><img src="Images/home.png" title="Main Page" width="50px" height="50px"
                         alt="Where is my button?"></a>
 
-                <a href="thirdPage.html"><img src="Images/next.png" align="right" title="Next Page" width="50px"
+                <a href="thirdPage2.html"><img src="Images/next.png" align="right" title="Next Page" width="50px"
                         height="50px" alt="Where is my button?"></a>
             </center>
         </header>
