--- a/thirdPage2.html
+++ b/thirdPage2.html
@@ -5,17 +5,17 @@
 
 <head>
     <title> Jadnell Reyes' Website </title>
-    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
+    <link href="Styles/styleSheet2.css" type="text/css" rel="stylesheet" />
 </head>
 
 <body>
     <div>
 
         <header>
-            <a href="secondPage.html"><img src="Images/back.png" align="left" title="Previous Page" width="50px"
+            <a href="secondPage2.html"><img src="Images/back.png" align="left" title="Previous Page" width="50px"
                     height="50px" alt="Where is my button?"></a>
 
-            <a href="index.html"><img src="Images/home.png" align="right" title="Main Page" width="50px" height="50px"
+            <a href="index2.html"><img src="Images/home.png" align="right" title="Main Page" width="50px" height="50px"
                     alt="Where is my button?"></a>
         </header>
 
