Modified Navigation Bar
Designed a proper navigation bar with 5 buttons. Also changed the social media buttons structure in the code. They used to be inside a table.

--- a/index2.html
+++ b/index2.html
@@ -12,28 +12,47 @@
             a Puerto Rican Computer Engineering Student">
 
 <body>
-    <div>
-        <header>
-            <a href="secondPage2.html"><img src="Images/next.png" align="right" title="Next Page" width="50px"
-                    height="50px" alt="Where is my button?">
-            </a>
-            <a href="index.html"><img src="Images/otherStyleSheet.png" align="left" title="Change Style Sheet"
-                    width="50px" height="50px" alt="Where is my button?">
-            </a>
-        </header>
-    </div>
-    <br>
-    <br>
+    <header>
+        <static div id="navbar">
+            <center>
+                <a class="button" href="index2.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                        height="50px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="index.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
+                        height="50px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="secondPage2.html"><img src="Images/programmingLanguages.png"
+                        title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="thirdPage2.html">
+                    <img src="Images/projects.png" title="Projects" width="50px" height="50px"
+                        alt="Where is my button?">
+                </a>
+
+                <a class="button" href="javascriptPreQuiz.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
+                        width="50px" height="50px" alt="Where is my button?">
+                </a>
+            </center>
+            </div>
+    </header>
+
+    <br><br>
 
     <h2>
         <center> Hello, </center>
     </h2>
+
     <h1>
         <center> my name is Jadnell H. Reyes Pérez </center>
     </h1>
+
     <hr width="90%">
+
     <h5>
-        <center> <b>↓ This is me ↓ </b> </center>
+        <center> <b>↓ This is me ↓</b> </center>
     </h5>
     <center>
         <a><img class="myPic" src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
@@ -81,40 +100,35 @@
     </ul>
     <hr width="90%">
 
-    <div>
-        <footer>
-            <h4>
-                <center> Social Media: </center>
-            </h4>
+    <footer>
+        <h4>
+            <center> Social Media: </center>
+        </h4>
 
+        <static div id="socialMediaBar">
             <center>
-                <table class="one">
-                    <thead>
-                        <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
-                                    title="Instagram" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
-                        <th> <a href="https://www.facebook.com/jadnell"><img src="Images/facebook.png" align="left"
-                                    title="Facebook" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
-                        <th><a href="https://github.com/jadnell555"><img src="Images/github.png" align="center"
-                                    title="GitHub" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
+                <a class="button" href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png"
+                        title="About Me" width="50px" height="50px" alt="Where is my button?">
+                </a>
 
-                        <th><a href="https://paypal.me/jadnell"><img src="Images/paypal.png" align="right"
-                                    title="PayPal" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
+                <a class="button" href="https://www.facebook.com/jadnell"><img src="Images/facebook.png"
+                        title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
+                </a>
 
-                        <th><a href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
-                                    align="right" title="Discord" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
-                    </thead>
-                </table>
+                <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png"
+                        title="Programming Languages" width="50px" height="50px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="https://paypal.me/jadnell">
+                    <img src="Images/paypal.png" title="Projects" width="50px" height="50px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
+                        title="JavaScript Pre-Quiz" width="50px" height="50px" alt="Where is my button?">
+                </a>
             </center>
-            <sub> Page 1/3 </sub>
-        </footer>
-    </div>
-
-
+            </div>
+    </footer>
 </body>
 
 </HTML>
