--- a/secondPage2.html
+++ b/secondPage2.html
@@ -9,23 +9,34 @@
 </head>
 
 <body>
-    <div>
-        <header>
+    <header>
+        <static div id="navbar">
             <center>
-                <a href="index2.html"><img src="Images/back.png" align="left" title="Previous Page" width="50px"
-                        height="50px" alt="Where is my button?"></a>
+                <a class="button" href="index2.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                        height="50px" alt="Where is my button?">
+                </a>
 
-                <a href="index2.html"><img src="Images/home.png" title="Main Page" width="50px" height="50px"
-                        alt="Where is my button?"></a>
+                <a class="button" href="secondPage.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
+                        height="50px" alt="Where is my button?">
+                </a>
 
-                <a href="thirdPage2.html"><img src="Images/next.png" align="right" title="Next Page" width="50px"
-                        height="50px" alt="Where is my button?"></a>
+                <a class="button" href="secondPage2.html"><img src="Images/programmingLanguages.png"
+                        title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="thirdPage2.html">
+                    <img src="Images/projects.png" title="Projects" width="50px" height="50px"
+                        alt="Where is my button?">
+                </a>
+
+                <a class="button" href="javascriptPreQuiz.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
+                        width="50px" height="50px" alt="Where is my button?">
+                </a>
             </center>
-        </header>
-    </div>
+            </div>
+    </header>
 
-    <br>
-    <br>
+    <br><br>
 
     <h2>
         <center>Programming Languages Learned: </center>
@@ -147,39 +158,36 @@
     <br>
 
     <hr width="90%">
-    <div>
-        <footer>
-            <h4>
-                <center> Social Media: </center>
-            </h4>
 
+    <footer>
+        <h4>
+            <center> Social Media: </center>
+        </h4>
+
+        <static div id="socialMediaBar">
             <center>
-                <table class="one">
-                    <thead>
-                        <th> <a href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png" align="left"
-                                    title="Instagram" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
-                        <th> <a href="https://www.facebook.com/jadnell"><img src="Images/facebook.png" align="left"
-                                    title="Facebook" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
-                        <th><a href="https://github.com/jadnell555"><img src="Images/github.png" align="center"
-                                    title="GitHub" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
+                <a class="button" href="https://www.instagram.com/j_dnell/"><img src="Images/instagram.png"
+                        title="About Me" width="50px" height="50px" alt="Where is my button?">
+                </a>
 
-                        <th><a href="https://paypal.me/jadnell"><img src="Images/paypal.png" align="right"
-                                    title="PayPal" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
+                <a class="button" href="https://www.facebook.com/jadnell"><img src="Images/facebook.png"
+                        title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
+                </a>
 
-                        <th><a href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
-                                    align="right" title="Discord" width="75px" height="75px" alt="Where is my button?">
-                            </a> </th>
-                    </thead>
-                </table>
+                <a class="button" href="https://github.com/jadnell555"><img src="Images/github.png"
+                        title="Programming Languages" width="50px" height="50px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="https://paypal.me/jadnell">
+                    <img src="Images/paypal.png" title="Projects" width="50px" height="50px" alt="Where is my button?">
+                </a>
+
+                <a class="button" href="https://discord.com/channels/@harshGhost.error"><img src="Images/discord.png"
+                        title="JavaScript Pre-Quiz" width="50px" height="50px" alt="Where is my button?">
+                </a>
             </center>
-            <sub> Page 2/3 </sub>
-        </footer>
-    </div>
-
+            </div>
+    </footer>
 </body>
 
 </HTML>
