--- a/aboutMe.html
+++ b/aboutMe.html
@@ -15,19 +15,19 @@
     <header>
         <static div id="navbar">
             <center>
-                <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                <a class="button" href="aboutMe.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="index2.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
-                        height="50px" alt="Where is my button?">
+                <a class="button" href="aboutMe2.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet"
+                        width="50px" height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="secondPage.html"><img src="Images/programmingLanguages.png"
+                <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
                         title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="thirdPage.html">
+                <a class="button" href="projectsPage.html">
                     <img src="Images/projects.png" title="Projects" width="50px" height="50px"
                         alt="Where is my button?">
                 </a>
@@ -55,7 +55,7 @@
         <center> <b>↓ This is me ↓</b> </center>
     </h5>
     <center>
-        <a><img class="myPic" src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
+        <a><img id="myPic" src="Images/ME.jpg" title="Hello! This is me" width="500px" height="500px"
                 alt="I was supposed to appear here..."></a>
     </center>
     <hr width="90%">
@@ -82,7 +82,7 @@
         <li> <b><i>Degree:</i></b> Bachelor's </li>
         <li> <b><i>Concentration:</i></b> Computer Engineering</li>
         <li> <b><i>Graduation Date:</i></b> May, 2023 </li>
-        <li> <b><i>Years in College:</i></b> 5 </li>
+        <li> <b><i>Years in College:</i></b> 4 </li>
         <li> <b><i>GPA:</i></b> 3.29 </li>
     </ul>
     <hr width="90%">
