--- a/javascriptPreQuiz2.html
+++ b/javascriptPreQuiz2.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>JavaScript Pre-Quiz </title>
-    <link href="Styles/styleSheet1.css" type="text/css" rel="stylesheet" />
+    <link href="Styles/styleSheet2.css" type="text/css" rel="stylesheet" />
 
 </head>
 <meta name="description" content="This webpage works as an online quiz to test the student's JavaScript knowledge.">
@@ -13,24 +13,24 @@
     <header>
         <static div id="navbar">
             <center>
-                <a class="button" href="aboutMe.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                <a class="button" href="aboutMe2.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="javascriptPreQuiz2.html"><img src="Images/otherStyleSheet.png"
+                <a class="button" href="javascriptPreQuiz.html"><img src="Images/otherStyleSheet.png"
                         title="Change Style Sheet" width="50px" height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
+                <a class="button" href="progLanguagesPage2.html"><img src="Images/programmingLanguages.png"
                         title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="projectsPage.html">
+                <a class="button" href="projectsPage2.html">
                     <img src="Images/projects.png" title="Projects" width="50px" height="50px"
                         alt="Where is my button?">
                 </a>
 
-                <a class="button" href="javascriptPreQuiz.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
+                <a class="button" href="javascriptPreQuiz2.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
                         width="50px" height="50px" alt="Where is my button?">
                 </a>
             </center>
@@ -346,11 +346,11 @@
             </ol>
         </form>
     </div>
-    
+
     <hr>
 
     <footer>
-        <h4>
+        <h4 id="social">
             <center> Social Media: </center>
         </h4>
 
