--- a/projectsPage.html
+++ b/projectsPage.html
@@ -12,19 +12,19 @@
     <header>
         <static div id="navbar">
             <center>
-                <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                <a class="button" href="aboutMe.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="thirdPage2.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
+                <a class="button" href="projectsPage2.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="secondPage.html"><img src="Images/programmingLanguages.png"
+                <a class="button" href="progLanguagesPage.html"><img src="Images/programmingLanguages.png"
                         title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="thirdPage.html">
+                <a class="button" href="projectsPage.html">
                     <img src="Images/projects.png" title="Projects" width="50px" height="50px"
                         alt="Where is my button?">
                 </a>
