--- a/projectsPage2.html
+++ b/projectsPage2.html
@@ -12,24 +12,24 @@
     <header>
         <static div id="navbar">
             <center>
-                <a class="button" href="index2.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                <a class="button" href="aboutMe2.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="thirdPage.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
+                <a class="button" href="projectsPage.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="secondPage2.html"><img src="Images/programmingLanguages.png"
+                <a class="button" href="progLanguagesPage2.html"><img src="Images/programmingLanguages.png"
                         title="Programming Languages" width="55px" height="55px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="thirdPage2.html">
+                <a class="button" href="projectsPage2.html">
                     <img src="Images/projects.png" title="Projects" width="50px" height="50px"
                         alt="Where is my button?">
                 </a>
 
-                <a class="button" href="javascriptPreQuiz.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
+                <a class="button" href="javascriptPreQuiz2.html"><img src="Images/page.png" title="JavaScript Pre-Quiz"
                         width="50px" height="50px" alt="Where is my button?">
                 </a>
             </center>
