--- a/aboutMe2.html
+++ b/aboutMe2.html
@@ -19,7 +19,7 @@
                         height="50px" alt="Where is my button?">
                 </a>
 
-                <a class="button" href="aboutMe.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
+                <a class="button" href="index.html"><img src="Images/otherStyleSheet.png" title="Change Style Sheet" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
