--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <static div id="navbar">
             <center>
-                <a class="button" href="aboutMe.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
