--- a/javascriptPreQuiz.html
+++ b/javascriptPreQuiz.html
@@ -13,7 +13,7 @@
     <header>
         <static div id="navbar">
             <center>
-                <a class="button" href="aboutMe.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
+                <a class="button" href="index.html"><img src="Images/aboutMe.png" title="About Me" width="50px"
                         height="50px" alt="Where is my button?">
                 </a>
 
@@ -346,7 +346,7 @@
             </ol>
         </form>
     </div>
-    
+
     <hr>
 
     <footer>
